Update skills css

--- a/static/assets/css/skills.css
+++ b/static/assets/css/skills.css
@@ -1,4 +1,4 @@
-/* What I do? Section Start */
+/* Skills Section Start */
 
 .item h1 {
     /* font-family: "ReadexProRegular"; */
@@ -119,4 +119,4 @@
 }
 
 
-/* What I do? Section End */
+/* Skills Section End */
