Changed css rename

--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -11,7 +11,7 @@
 @import url("./about.css");
 
 /* Services */
-@import url("./services.css");
+@import url("./skills.css");
 
 /* Resume */
 @import url("./resume.css");
