--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -85,7 +85,7 @@
                                     <a href="#about">About</a>
                                 </li>
                                 <li>
-                                    <a href="#skills">What I Do</a>
+                                    <a href="#skills">Skills</a>
                                 </li>
                                 <li>
                                     <a href="#resume">Resume</a>
