Changed pdf href

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -189,7 +189,7 @@
                                 </li>
                             </ul>
                             <div class="admin-contact-button">
-                                <button><a href="/static/assets/pdf/SabuhiGasimov-JuniorFrontEndDeveloper.pdf Gasimov - Junior Front End Developer.pdf" class="send" type="submit" download>Download CV</a></button>
+                                <button><a href="/static/assets/pdf/SabuhiGasimov-JuniorFrontEndDeveloper.pdf" class="send" type="submit" download>Download CV</a></button>
                             </div>
                         </div>
                     </div>
