Change rename work

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -93,7 +93,7 @@
                                     <a href="#blog">Blog</a>
                                 </li>
                                 <li>
-                                    <a href="#work">Portfolios</a>
+                                    <a href="#projects">Projects</a>
                                 </li>
                                 <li>
                                     <a href="#feedbacks">Feedbacks</a>
@@ -382,7 +382,7 @@
             <!-- Blog Section End -->
         </div>
     </section>
-    <section id="work">
+    <section id="projects">
         <!-- My Projects Section Start -->
         <div class="section bg-dark">
             <div class="container">
