--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -17,7 +17,7 @@
 @import url("./resume.css");
 
 /* Works */
-@import url("./work.css");
+@import url("./projects.css");
 
 /* Feedbacks */
 @import url("./feedbacks.css");
