Update project section title text

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -390,7 +390,7 @@
                 <div class="header-text position-relative mb-6 text-light">
                     <h2 class="text-center">Portfolio</h2>
                     <p class="position-center text-center">
-                        My projects
+                        My Projects
                         <span class="heading-separator-line border-bottom d-block mx-auto"></span>
                     </p>
                 </div>
