Update container max-width

--- a/static/admin/assets/css/common.css
+++ b/static/admin/assets/css/common.css
@@ -172,7 +172,7 @@ table thead {
 }
 
 .form-item .container {
-    max-width: 880px;
+    max-width: 85%;
     width: 100%;
     height: 100%;
     margin: 0 auto;
