Add cursor grab

--- a/static/assets/css/projects.css
+++ b/static/assets/css/projects.css
@@ -1,4 +1,8 @@
     /* My Projects Section Start */
+
+    #splide_project {
+        cursor: grab;
+    }
     
     .work-section-items {
         position: relative;
