--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -444,7 +444,7 @@
                             }
                         }
                     });
-                    splide_project.mount( window.splide.Extensions ); 
+                    splide_project.mount(window.splide.Extensions); 
                 </script>
             </div>
         </div>
@@ -604,7 +604,10 @@
     </footer>
     <!--=============== Vanila-JS ===============-->
     <script src="/static/assets/js/script.js"></script>
-    
+    <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+    <script>
+       $(document)
+    </script>
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
