--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -126,6 +126,7 @@
                     </div>
                 </div>
             </header>
+            <!-- Header Section End -->
             <div class="intro-position-center text-center">
                 <div class="header-content-text">
                     <h3>Welcome</h3>
