--- a/static/assets/css/skills.css
+++ b/static/assets/css/skills.css
@@ -4,12 +4,12 @@
     font-weight: 500 !important;
     margin-top: 10px;
     font-size: 18px;
-    color: rgba(255,255,255,.5);
+    color: rgba(255, 255, 255, .5);
 }
 
 .item p {
     font-weight: 400 !important;
-    color: rgba(255,255,255,.5);
+    color: rgba(255, 255, 255, .5);
     padding-top: 10px;
     line-height: 1.8;
 }
@@ -115,5 +115,6 @@
 .list-groups:hover .bx-data {
     color: var(--color-tundora);
 }
+
 
 /* Skills Section End */
