--- a/static/assets/css/feedbacks.css
+++ b/static/assets/css/feedbacks.css
@@ -1,5 +1,44 @@
 /* Feedbacks Section Start */
 
+@media only screen and (max-width: 768px) {
+    .feedbacks_section .feedbacks_items .feedbacks_item {
+        margin-bottom: 34px;
+    }
+}
+
+.feedbacks_section .feedbacks_items .feedbacks_item {
+    background-color: #111418;
+    color: #fff;
+    padding: 48px;
+    border-radius: 6px;
+}
+
+.feedbacks_section .feedbacks_items .feedbacks_item p {
+    line-height: 1.5;
+}
+
+.feedbacks_section .feedbacks_items .feedbacks_item .feedbacks_person {
+    display: flex;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.feedbacks_section .feedbacks_items .feedbacks_item .feedbacks_person img {
+    width: 65px;
+    height: 65px;
+    border-radius: 50%;
+    margin-right: 12px;
+}
+
+.feedbacks_section .feedbacks_items .feedbacks_item .feedbacks_person h1 {
+    color: #fff;
+    padding-bottom: 6px;
+}
+
+.feedbacks_section .feedbacks_items .feedbacks_item .feedbacks_person span {
+    color: #ffffff80;
+}
+
 .carousel {
     transition: all .4s ease;
 }
@@ -10,7 +49,7 @@
 }
 
 .carousel:hover p {
-    color: rgba(255,255,255,.5);
+    color: rgba(255, 255, 255, .5);
     transition: all .4s ease;
 }
 
@@ -55,5 +94,6 @@
     margin-bottom: 20px;
     line-height: 1.4;
 }
+
 
 /* Feedbacks Section End */
