--- a/static/assets/css/skills.css
+++ b/static/assets/css/skills.css
@@ -31,7 +31,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background: var(--color-shark);
+    background: #2a2f33;
     border-radius: 5px;
     padding: 10px 20px;
 }
