Updated index dark mode

--- a/templates/app/index.html
+++ b/templates/app/index.html
@@ -151,7 +151,7 @@
         </div>
         <!-- Intro Section End -->
     </section>
-    <section id="about" class="bg-dark">
+    <section id="about" class="bg-dark-light">
         <!-- About Section Start -->
         <div class="about-section pt-7 pb-4">
             <!-- Heading Section Start -->
@@ -195,9 +195,9 @@
         </div>
         <!-- About Section End -->
     </section>
-    <section id="skills">
+    <section id="skills" class="bg-dark">
         <!-- What I do Section Start -->
-        <div class="section bg-dark-light">
+        <div class="section">
             <!-- Heading Section Start -->
             <div class="header-text position-relative text-light mb-3">
                 <h2 class="text-center">Skills</h2>
@@ -262,7 +262,7 @@
         </div>
         <!-- What I do Section End -->
     </section>
-    <section id="resume" class="bg-dark">
+    <section id="resume" class="bg-dark-light">
         <div class="resume-section pt-7 pb-4">
             <!-- Heading Section Start -->
             <div class="header-text position-relative mb-5 text-light">
@@ -305,8 +305,8 @@
             <!-- Resume Section End -->
         </div>
     </section>
-    <section id="blog">
-        <div class="section pt-7 bg-dark-light">
+    <section id="blog" class="bg-dark">
+        <div class="section pt-7">
             <!-- Heading Section Start -->
             <div class="header-text position-relative mb-6 text-light">
                 <h2 class="text-center">Blog</h2>
@@ -364,9 +364,9 @@
             <!-- Blog Section End -->
         </div>
     </section>
-    <section id="projects">
+    <section id="projects" class="bg-dark-light">
         <!-- My Projects Section Start -->
-        <div class="section bg-dark">
+        <div class="section">
             <div class="container">
                 <!-- Heading Section Start -->
                 <div class="header-text position-relative mb-6 text-light">
@@ -432,7 +432,7 @@
         </div>
         <!-- My Projects Section End -->
     </section>
-    <section id="feedbacks" class="bg-dark-light">
+    <section id="feedbacks" class="bg-dark">
         <!-- Feedbacks Section Start -->
         <div class="container pt-7">
             <!-- Heading Section Start -->
@@ -520,7 +520,7 @@
         </div>
         <!-- Feedbacks Section End -->
     </section>
-    <section id="contact" class="bg-dark">
+    <section id="contact" class="bg-dark-light">
         <!-- Contact Section Start -->
         <div class="section">
             <!-- Heading Section Start -->
@@ -591,7 +591,7 @@
         </div>
         <!-- Contact Section End -->
     </section>
-    <footer id="footer" class="bg-dark-light">
+    <footer id="footer" class="bg-dark">
         <!-- Footer Section Start -->
         <div class="container">
             <div class="footer-item">
