--- a/static/assets/css/common.css
+++ b/static/assets/css/common.css
@@ -161,6 +161,29 @@ body {
     font-family: "Poppins";
 }
 
+
+/* Loader gizlənəndə */
+
+.loader.hidden {
+    opacity: 0;
+    visibility: hidden;
+}
+
+
+/* Main content */
+
+.main-content {
+    opacity: 0;
+    transition: opacity 1.3s ease;
+}
+
+
+/* Main content görsənəndə */
+
+.main-content.visible {
+    opacity: 1;
+}
+
 .loader {
     position: fixed;
     top: 0;
@@ -172,14 +195,13 @@ body {
     justify-content: center;
     align-items: center;
     z-index: 9999;
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 1s ease, visibility 1s ease;
 }
 
 .loader img {
     transition: all ease .4s;
-}
-
-.disappear {
-    animation: vanish 3s forwards ease;
 }
 
 @keyframes vanish {
@@ -304,8 +326,8 @@ body {
 }
 
 .section {
-    padding-top: 5rem;
-    padding-bottom: 4rem;
+    padding-top: 9rem;
+    padding-bottom: 8rem;
 }
 
 .position-center {
